--- a/index.Rmd
+++ b/index.Rmd
@@ -10,7 +10,7 @@ output:
 What this is about. 
 
 <iframe src="https://player.vimeo.com/video/299263596" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-<p><a href="https://vimeo.com/299263596">CODATA-RDA Research Data Science Summer School Trieste 2018</a> from <a href="https://vimeo.com/user91439529">Asha CODATA</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<p><a href="https://vimeo.com/299263596">CODATA-RDA Research Data Science Summer School Trieste 2018</a> .</p>
 
 
 [The materials we have used in our schools.](https://github.com/CODATA-RDA-DataScienceSchools/Materials)
