--- a/DataSteward/DataStewardInvitation.Rmd
+++ b/DataSteward/DataStewardInvitation.Rmd
@@ -38,4 +38,4 @@ Students wishing to attend this strand will need to cover their accomodation and
 
 As this is a pilot students attending this strand will be interviewed afterwards to get feedback to improve the curriculum.
 
-Candidates interested in attending should contact the  director of the Pilot strnd, [Hugh Shanahan](mailto://hugh.shanahan@rhul.ac.uk) before June 1. 
+Candidates interested in attending should contact the  director of the Pilot strand, [Hugh Shanahan](mailto://hugh.shanahan@rhul.ac.uk) before June 1. 
